add logo and favorite icons

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>JavaScript Quiz</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="theme-color" content="#343a40">
-        <link rel="manifest" href="manifest.json">
-        <link rel="stylesheet" href="main.min.css">
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <title>JavaScript Quiz</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#343a40">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=3eKRPRqJ2k">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?v=3eKRPRqJ2k">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png?v=3eKRPRqJ2k">
+    <link rel="manifest" href="/manifest.json?v=3eKRPRqJ2k">
+    <link rel="mask-icon" href="safari-pinned-tab.svg?v=3eKRPRqJ2k" color="#5bbad5">
+    <link rel="shortcut icon" href="favicon.ico?v=3eKRPRqJ2k">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="main.min.css">
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
