--- a/src/index-template.html
+++ b/src/index-template.html
@@ -5,12 +5,11 @@
     <title>JavaScript Quiz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#343a40">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=3eKRPRqJ2k">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?v=3eKRPRqJ2k">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png?v=3eKRPRqJ2k">
-    <link rel="manifest" href="/manifest.json?v=3eKRPRqJ2k">
-    <link rel="mask-icon" href="safari-pinned-tab.svg?v=3eKRPRqJ2k" color="#5bbad5">
-    <link rel="shortcut icon" href="favicon.ico?v=3eKRPRqJ2k">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+    <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="favicons/favicon.ico">
     <meta name="theme-color" content="#ffffff">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="main.min.css">
