add meta description

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>JavaScript Quiz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description" content="JavaScript quiz application which allows you to test your skills">
     <meta name="theme-color" content="#343a40">
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
