--- a/src/index-template.html
+++ b/src/index-template.html
@@ -12,6 +12,7 @@
     <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="favicons/favicon.ico">
     <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
